--- a/BusAppCoreData/BusAppCoreData/Storyboard.storyboard
+++ b/BusAppCoreData/BusAppCoreData/Storyboard.storyboard
@@ -1,39 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="XGQ-zF-JzO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="pq6-yp-7Yp">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="F2A-y6-IfL">
-            <objects>
-                <viewController id="Utn-Qx-cam" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="KPZ-Lx-T1y"/>
-                        <viewControllerLayoutGuide type="bottom" id="c92-vN-1zg"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Vur-ag-api">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iBX-jD-p8u">
-                                <rect key="frame" x="20" y="-20" width="320" height="568"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="SqV-Oy-XLK"/>
-                    <connections>
-                        <segue destination="XOq-n4-aYC" kind="push" id="qfr-a0-FPc"/>
-                        <segue destination="hu4-u4-m8j" kind="push" id="0wW-UW-7AW"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vP6-5Q-q03" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="558" y="-125"/>
-        </scene>
         <!--View Controller-->
         <scene sceneID="fcq-NL-50x">
             <objects>
@@ -74,12 +44,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WRg-Md-zVO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1351" y="192"/>
+            <point key="canvasLocation" x="2732" y="192"/>
         </scene>
-        <!--View Controller-->
+        <!--Stops Near View Controller-->
         <scene sceneID="M2K-VY-PaJ">
             <objects>
-                <viewController id="XOq-n4-aYC" sceneMemberID="viewController">
+                <viewController id="XOq-n4-aYC" customClass="StopsNearViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Yld-Gt-hcp"/>
                         <viewControllerLayoutGuide type="bottom" id="UiZ-D3-hBv"/>
@@ -103,17 +73,17 @@
                     </view>
                     <navigationItem key="navigationItem" id="riz-0x-P4a"/>
                     <connections>
-                        <segue destination="bxf-Rf-9fD" kind="push" id="Ktq-rZ-i2s"/>
+                        <segue destination="bxf-Rf-9fD" kind="push" id="twg-mC-Dq0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4uI-ZH-GQj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1000" y="192"/>
+            <point key="canvasLocation" x="2386" y="192"/>
         </scene>
-        <!--View Controller-->
+        <!--Trajectory Planning View Controller-->
         <scene sceneID="C5V-Sl-fT5">
             <objects>
-                <viewController id="hu4-u4-m8j" sceneMemberID="viewController">
+                <viewController id="hu4-u4-m8j" customClass="TrajectoryPlanningViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="3zd-t7-HJL"/>
                         <viewControllerLayoutGuide type="bottom" id="yI3-Ax-Wxp"/>
@@ -127,25 +97,104 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2eq-tS-Vvq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1000" y="-472"/>
+            <point key="canvasLocation" x="2386" y="-462"/>
+        </scene>
+        <!--Bus App View Controller-->
+        <scene sceneID="Zv5-AQ-Z1t">
+            <objects>
+                <viewController id="3gO-1d-0YW" customClass="BusAppViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="W1N-OS-VQz"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ara-bz-33F"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mJi-sT-jbO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I3a-xx-aW9">
+                                <rect key="frame" x="0.0" y="64" width="320" height="252"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YB3-JM-T9o">
+                                        <rect key="frame" x="145" y="202" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="1">
+                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="hu4-u4-m8j" kind="push" id="Fcw-5T-Pf9"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="centerX" secondItem="YB3-JM-T9o" secondAttribute="centerX" id="cBC-Ji-2PH"/>
+                                    <constraint firstAttribute="bottom" secondItem="YB3-JM-T9o" secondAttribute="bottom" constant="20" symbolic="YES" id="kYi-An-P2h"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WwF-TR-JwJ">
+                                <rect key="frame" x="0.0" y="316" width="320" height="252"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pOn-9b-4xV">
+                                        <rect key="frame" x="145" y="20" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="2">
+                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="XOq-n4-aYC" kind="push" id="sAn-Wo-hdf"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.99224089910000002" green="1" blue="0.99893663929999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="centerX" secondItem="pOn-9b-4xV" secondAttribute="centerX" id="5NR-8a-5Re"/>
+                                    <constraint firstItem="pOn-9b-4xV" firstAttribute="top" secondItem="WwF-TR-JwJ" secondAttribute="top" constant="20" symbolic="YES" id="Tf0-cg-8if"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="I3a-xx-aW9" firstAttribute="width" secondItem="WwF-TR-JwJ" secondAttribute="width" id="7dT-GP-GKV"/>
+                            <constraint firstItem="WwF-TR-JwJ" firstAttribute="top" secondItem="I3a-xx-aW9" secondAttribute="bottom" id="BNi-4s-mfM"/>
+                            <constraint firstAttribute="trailing" secondItem="I3a-xx-aW9" secondAttribute="trailing" id="O7i-rI-8aV"/>
+                            <constraint firstItem="WwF-TR-JwJ" firstAttribute="height" secondItem="I3a-xx-aW9" secondAttribute="height" id="Wdu-t4-SEa"/>
+                            <constraint firstItem="Ara-bz-33F" firstAttribute="top" secondItem="WwF-TR-JwJ" secondAttribute="bottom" id="ZIg-b9-qUd"/>
+                            <constraint firstItem="WwF-TR-JwJ" firstAttribute="leading" secondItem="mJi-sT-jbO" secondAttribute="leading" id="vKs-9a-CpV"/>
+                            <constraint firstItem="I3a-xx-aW9" firstAttribute="leading" secondItem="mJi-sT-jbO" secondAttribute="leading" id="waw-to-05M"/>
+                            <constraint firstItem="I3a-xx-aW9" firstAttribute="top" secondItem="W1N-OS-VQz" secondAttribute="bottom" id="wpG-t8-QW8"/>
+                            <constraint firstAttribute="trailing" secondItem="WwF-TR-JwJ" secondAttribute="trailing" id="xly-tf-ktY"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="JQS-Ol-Zao"/>
+                    <connections>
+                        <outlet property="a" destination="YB3-JM-T9o" id="9yU-3e-bD1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uLP-hg-LwM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2023" y="-134"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="TMc-S9-j9l">
+        <scene sceneID="umu-VO-FdU">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XGQ-zF-JzO" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pq6-yp-7Yp" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Psw-fc-BQc">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SGg-ae-ACb">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Utn-Qx-cam" kind="relationship" relationship="rootViewController" id="CZP-wo-pFV"/>
+                        <segue destination="3gO-1d-0YW" kind="relationship" relationship="rootViewController" id="Gb1-U5-LEw"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="489-Bw-YF0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oh7-SQ-u3L" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="191" y="-125"/>
+            <point key="canvasLocation" x="1674" y="-134"/>
         </scene>
     </scenes>
     <color key="tintColor" red="1" green="0.75243891230000004" blue="0.36652966209999999" alpha="1" colorSpace="calibratedRGB"/>
